# openapi/specs/matching_models.yaml
@@ -6,11 +6,10 @@ components:
   schemas:
     EmployerContactDto:
       type: object
-      required:
-        - companyName
       properties:
         companyName:
           type: string
+          nullable: true
         phone:
           type: string
           nullable: true
@@ -43,7 +42,6 @@ components:
       type: object
       required:
         - id
-        - companyName
         - positionName
         - description
         - matchScore
@@ -55,6 +53,7 @@ components:
           format: int64
         companyName:
           type: string
+          nullable: true
         positionName:
           type: string
         description:
